--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,43 @@
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    background-color: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.top-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    max-width: 1000px;
+    background-color: #1F2937;
+    color: #F9FAF8;
+}
+
 #navbar {
     display: flex;
-    flex-direction: row;
     background-color: #1F2937;
     font-size: 24px;
     color: #F9FAF8;
-    justify-content: space-evenly;
-
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    margin-left: -20px;
+    margin-right: -20px;
 }
 
-ul {
+.nav-links {
     list-style-type: none;
     display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+p {
+    text-wrap: wrap;
 }
 
 li {
@@ -21,4 +48,25 @@ li a {
     text-decoration: none;
     color: #e5e7eb;
     font-size: 18px;
+}
+
+img {
+    width: 300px;
+    height: auto;
+    padding-left: 50px;
+}
+
+.hero {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    padding: 20px 20px;
+    margin-left: -20px;
+    margin-right: -20px;
+}
+
+.hero-text {
+    align-self: flex-start;
 }
