--- a/styles.css
+++ b/styles.css
@@ -40,17 +40,17 @@ p {
     text-wrap: wrap;
 }
 
-li {
+.nav-links li {
     padding: 10px;
 }
 
-li a {
+.nav-links li a {
     text-decoration: none;
     color: #e5e7eb;
     font-size: 18px;
 }
 
-img {
+.hero-image img {
     width: 300px;
     height: auto;
     padding-left: 50px;
