--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body, html {
     align-items: center;
 }
 
-.top-container {
+.container {
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -69,4 +69,76 @@ p {
 
 .hero-text {
     align-self: flex-start;
+}
+
+.hero button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.second-container {
+    justify-content: space-between;
+    height: 100%;
+    max-width: 1000px;
+    background-color: #ffffff;
+    color: #1F2937;
+    padding: 20px 20px;
+    margin-left: -20px;
+    margin-right: -20px;
+}
+
+h2 {
+    display: flex;
+    font-size: 24px;
+    color: #1F2937;
+    justify-content: center;
+}
+
+.subtitle {
+    padding-bottom: 20px;
+}
+.items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 130px;
+    padding-bottom: 40px
+}
+
+.item {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.item img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+}
+
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 36px;
+    background-color: #E5E7EB;
+    font-weight: lighter;
+    font-style: italic;
+    padding: 20px 0;
+}
+
+.steve {
+    justify-self: flex-end;
+    font-weight: bold;
+    justify-self: flex-end;
+    text-align: right;
+    width: 100%;
+    padding: 20px 20px;
 }
