--- a/styles.css
+++ b/styles.css
@@ -125,13 +125,15 @@ h2 {
 .quote-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     font-size: 36px;
     background-color: #E5E7EB;
     font-weight: lighter;
     font-style: italic;
     padding: 20px 0;
+    margin-left: -20px;
+    margin-right: -20px;
 }
 
 .steve {
@@ -141,4 +143,40 @@ h2 {
     text-align: right;
     width: 100%;
     padding: 20px 20px;
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: #ffffff;
+    color: #F9FAF8;
+    padding: 20px 20px;
+    margin-left: -20px;
+    margin-right: -20px;
+}
+
+.action-call {
+    background-color: #3882F6;
+    margin: auto;
+    padding: 20px 20px;
+    border-radius: 20px;
+}
+
+.action-call h2 {
+    display: flex;
+    font-size: 24px;
+    color: #F9FAF8;
+    justify-content: flex-start;
+}
+
+.action-call button {
+    background-color: #F9FAF8;
+    color: #1F2937;
+    border: none;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
 }
