--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,6 @@ h2 {
     background-color: #E5E7EB;
     font-weight: lighter;
     font-style: italic;
-    padding: 20px 0;
     margin-left: -20px;
     margin-right: -20px;
 }
@@ -152,7 +151,7 @@ h2 {
     align-items: flex-start;
     background-color: #ffffff;
     color: #F9FAF8;
-    padding: 20px 20px;
+    padding: 60px 20px;
     margin-left: -20px;
     margin-right: -20px;
 }
@@ -179,4 +178,15 @@ h2 {
     font-size: 18px;
     cursor: pointer;
     border-radius: 5px;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    padding: 20px 20px;
+    margin-left: -20px;
+    margin-right: -20px;
 }
