--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgb(158, 170, 180);
 }
 
 .container {
@@ -171,13 +172,15 @@ h2 {
 }
 
 .action-call button {
-    background-color: #F9FAF8;
-    color: #1F2937;
-    border: none;
-    padding: 10px 20px;
+    background: #3882f6;
+    border-radius: 8px;
+    color: #f9faf8;
+    font-weight: 600;
     font-size: 18px;
-    cursor: pointer;
-    border-radius: 5px;
+    border: 3px solid #f9faf8;
+    width: 150px;
+    height: 40px;
+    transition: all 0.3s ease;
 }
 
 .footer {
